--- a/app/src/main/res/layout/diary_list_act.xml
+++ b/app/src/main/res/layout/diary_list_act.xml
@@ -20,7 +20,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".diarylist.DiaryListActivity"
+    tools:context=".ui.diarylist.DiaryListActivity"
     tools:openDrawer="start">
 
     <LinearLayout
