--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -27,16 +27,20 @@
 
     <item
         android:id="@+id/rate_navigation_menu_item"
-        android:icon="@drawable/ic_list"
+        android:icon="@drawable/ic_star"
         android:title="@string/rate_title" />
     <item
-        android:id="@+id/share_navigation_menu_item"
-        android:icon="@drawable/ic_statistics"
-        android:title="@string/share_title" />
+        android:id="@+id/feedback_navigation_menu_item"
+        android:icon="@drawable/ic_feedback"
+        android:title="@string/feedback_title" />
     <item
         android:id="@+id/translate_navigation_menu_item"
-        android:icon="@drawable/ic_list"
+        android:icon="@drawable/ic_translate"
         android:title="@string/translate_title" />
+    <item
+        android:id="@+id/share_navigation_menu_item"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share_title" />
     <item
         android:id="@+id/about_navigation_menu_item"
         android:icon="@drawable/ic_statistics"
