--- a/app/src/main/res/layout/statistics_act.xml
+++ b/app/src/main/res/layout/statistics_act.xml
@@ -20,7 +20,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.statistics.StatisticsActivity"
+    tools:context=".ui.main.statistics.StatisticsActivity"
     tools:openDrawer="start">
 
     <LinearLayout
