--- a/app/src/main/res/layout/diaries_frag.xml
+++ b/app/src/main/res/layout/diaries_frag.xml
@@ -20,7 +20,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/tasksContainer"
+        android:id="@+id/diariesContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -31,54 +31,33 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/filteringLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="@dimen/list_item_padding"
-                android:layout_marginRight="@dimen/list_item_padding"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:visibility="gone"/>
-
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/tasks_list"
+                android:id="@+id/diaryList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/noTasks"
+            android:id="@+id/noDiaries"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/noTasksIcon"
+                android:id="@+id/noDiariesIcon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_assignment_turned_in_24dp" />
 
             <TextView
-                android:id="@+id/noTasksMain"
+                android:id="@+id/noDiariesMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/no_tasks_all"
+                android:text="@string/no_diaries_all"
                 android:layout_marginBottom="@dimen/list_item_padding" />
-
-            <TextView
-                android:id="@+id/noTasksAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_gravity="center"
-                android:background="@drawable/touch_feedback"
-                android:gravity="center"
-                android:text="@string/no_tasks_add" />
 
         </LinearLayout>
     </RelativeLayout>
