change: adjust the space of diary list edge

--- a/app/src/main/res/layout/diaries_frag.xml
+++ b/app/src/main/res/layout/diaries_frag.xml
@@ -17,7 +17,10 @@
 <com.empty.jinux.simplediary.ui.main.diarylist.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin">
 
     <RelativeLayout
         android:id="@+id/diariesContainer"
