--- a/app/src/main/res/layout/recycler_view_item_category.xml
+++ b/app/src/main/res/layout/recycler_view_item_category.xml
@@ -2,4 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
+    android:background="#b5d2e7"
+    android:gravity="center_vertical"
+    android:paddingStart="6dp"
     android:id="@+id/label"/>
