--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,5 +23,6 @@
 
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="common_margin">5dp</dimen>
+    <dimen name="diary_list_item_height">70dp</dimen>
 
 </resources>
