--- a/app/src/main/res/layout/recycle_item_diary.xml
+++ b/app/src/main/res/layout/recycle_item_diary.xml
@@ -22,7 +22,7 @@
     android:orientation="horizontal">
 
     <FrameLayout
-        android:id="@+id/timeBlock"
+        android:id="@+id/weekBlock"
         android:layout_width="@dimen/diary_list_item_height"
         android:layout_height="match_parent"
         android:background="@color/colorAccent">
@@ -42,14 +42,7 @@
                 android:textSize="20dp"
                 tools:text="周二" />
 
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@id/weekName"
-                android:layout_below="@id/weekName"
-                android:textColor="@android:color/white"
-                tools:text="22:54" />
+
         </LinearLayout>
 
     </FrameLayout>
@@ -60,10 +53,18 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_toEndOf="@+id/timeBlock"
+        android:layout_toEndOf="@+id/weekBlock"
         android:lines="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         tools:text="test title, it very long long long long long long " />
 
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/title"
+        android:layout_below="@id/title"
+        android:textColor="@android:color/black"
+        tools:text="22:54" />
 
 </RelativeLayout>
