--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,5 +24,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="common_margin">5dp</dimen>
     <dimen name="diary_list_item_height">70dp</dimen>
+    <dimen name="swipe_item_menu_item_width">60dp</dimen>
 
 </resources>
