--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,5 +25,6 @@
     <dimen name="common_margin">5dp</dimen>
     <dimen name="diary_list_item_height">70dp</dimen>
     <dimen name="swipe_item_menu_item_width">60dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
 
 </resources>
