--- a/app/src/main/res/menu/taskdetail_fragment_menu.xml
+++ b/app/src/main/res/menu/taskdetail_fragment_menu.xml
@@ -19,5 +19,6 @@
     <item
         android:id="@+id/menu_delete"
         android:title="@string/menu_delete_diary"
-        app:showAsAction="always|withText" />
+        app:showAsAction="always|withText"
+        android:visible="false"/>
 </menu>
