--- a/app/src/main/res/layout/taskdetail_frag.xml
+++ b/app/src/main/res/layout/taskdetail_frag.xml
@@ -19,9 +19,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
@@ -34,7 +31,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="@dimen/common_margin"
-            tools:background="@drawable/ic_weather" />
+            tools:background="@drawable/ic_edit_weather_black_24dp" />
 
         <TextView
             android:id="@+id/weatherName"
@@ -56,7 +53,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="@dimen/common_margin"
-            android:background="@drawable/weather_location" />
+            android:background="@drawable/ic_location" />
 
         <TextView
             android:id="@+id/locationName"
@@ -81,14 +78,28 @@
         android:layout_margin="@dimen/common_margin"
         android:background="#111111" />
 
-    <EditText
-        android:id="@+id/diaryContent"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/common_margin"
-        android:background="#0fff"
-        android:gravity="top|start"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        tools:text="Medium Text" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <EditText
+            android:id="@+id/diaryContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/common_margin"
+            android:background="#0fff"
+            android:gravity="top|start"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:lineSpacingExtra="@dimen/edit_text_space_extra"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:textAppearance="@style/DiaryContentText"
+            android:textCursorDrawable="@drawable/edit_text_cursor"
+            tools:text="Medium Text" />
+    </ScrollView>
+
+
+    <include layout="@layout/layout_diary_detail_edit_tool"/>
+
 
 </LinearLayout>
