--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -8,24 +8,28 @@
     android:orientation="horizontal">
 
     <View
+        android:id="@+id/toolInputMethod"
         android:layout_width="@dimen/diary_detail_edit_tool_item_size"
         android:layout_height="@dimen/diary_detail_edit_tool_item_size"
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
         android:background="@drawable/ic_keyboard" />
 
     <View
+        android:id="@+id/toolLocation"
         android:layout_width="@dimen/diary_detail_edit_tool_item_size"
         android:layout_height="@dimen/diary_detail_edit_tool_item_size"
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
         android:background="@drawable/ic_location" />
 
     <View
+        android:id="@+id/toolWeather"
         android:layout_width="@dimen/diary_detail_edit_tool_item_size"
         android:layout_height="@dimen/diary_detail_edit_tool_item_size"
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
         android:background="@drawable/ic_weather" />
 
     <View
+        android:id="@+id/toolEmotion"
         android:layout_width="@dimen/diary_detail_edit_tool_item_size"
         android:layout_height="@dimen/diary_detail_edit_tool_item_size"
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
