change: use spinner for weather and emotion selections

--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -21,19 +21,19 @@
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
         android:background="@drawable/ic_location" />
 
-    <View
+    <Spinner
         android:id="@+id/toolWeather"
         android:layout_width="@dimen/diary_detail_edit_tool_item_size"
         android:layout_height="@dimen/diary_detail_edit_tool_item_size"
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
-        android:background="@drawable/ic_weather" />
+        android:background="@null" />
 
-    <View
+    <Spinner
         android:id="@+id/toolEmotion"
         android:layout_width="@dimen/diary_detail_edit_tool_item_size"
         android:layout_height="@dimen/diary_detail_edit_tool_item_size"
         android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
-        android:background="@drawable/ic_emotion" />
+        android:background="@null" />
 
 
 </LinearLayout>
