--- a/app/src/main/res/layout/statistics_frag.xml
+++ b/app/src/main/res/layout/statistics_frag.xml
@@ -17,6 +17,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -25,9 +26,20 @@
 
     <TextView
         android:id="@+id/statistics"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hello world this is a text"
+        android:background="#f0f"
+        android:textSize="20dp"/>
+
+    <com.empty.jinux.simplediary.ui.main.statistics.view.punchcard.PunchCard
+        android:id="@+id/punchCard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
+        app:contentPadding="10dp"
+        android:layout_margin="5dp"
+        app:cardPreventCornerOverlap="false"/>
 
 </LinearLayout>
