--- a/app/src/main/res/layout/layout_punchard_check_item.xml
+++ b/app/src/main/res/layout/layout_punchard_check_item.xml
@@ -1,33 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_gravity="center_vertical"
-    android:gravity="center_vertical"
-    >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_gravity="center_vertical">
 
-    <View
-        android:layout_width="20dp"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
 
-    <FrameLayout
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/ic_circle">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
         <View
-            android:id="@+id/stateChecked"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/ic_check_black_24dp"
-            />
-        <View
-            android:id="@+id/stateMissed"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible"
-            android:background="@drawable/ic_close_black_24dp"
-            />
-    </FrameLayout>
+            android:layout_width="20dp"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+
+        <FrameLayout
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_circle">
+            <View
+                android:id="@+id/stateChecked"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/ic_check_black_24dp"
+                />
+            <View
+                android:id="@+id/stateMissed"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible"
+                android:background="@drawable/ic_close_black_24dp"
+                />
+        </FrameLayout>
+
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/weekName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        tools:text="周一"/>
 
 </LinearLayout>
