change: add MPAndroidChart to implement StatisticView

--- a/app/src/main/res/layout/statistics_frag.xml
+++ b/app/src/main/res/layout/statistics_frag.xml
@@ -24,22 +24,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/statistics"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="hello world this is a text"
-        android:background="#f0f"
-        android:textSize="20dp"/>
-
     <com.empty.jinux.simplediary.ui.main.statistics.view.punchcard.PunchCard
         android:id="@+id/punchCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        app:contentPadding="10dp"
-        android:layout_margin="5dp"
-        app:cardPreventCornerOverlap="false"/>
+        style="@style/CardView.Light"/>
+
+    <com.empty.jinux.simplediary.ui.main.statistics.view.statistic.StatisticView
+        android:id="@+id/statistics"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 
 </LinearLayout>
