--- a/app/src/main/res/layout/layout_punchard_check_item.xml
+++ b/app/src/main/res/layout/layout_punchard_check_item.xml
@@ -45,6 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginTop="3dp"
         tools:text="周一"/>
 
 </LinearLayout>
