--- a/app/src/main/res/layout/layout_statistic_chart.xml
+++ b/app/src/main/res/layout/layout_statistic_chart.xml
@@ -1,5 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.mikephil.charting.charts.BarChart xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/statisticChat"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/statastics_for"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/card_view_title_text_size" />
+
+    <Button
+        android:id="@+id/yAxis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/title"
+        android:layout_toStartOf="@id/slash"
+        android:text="Words"
+        android:layout_marginStart="30dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/card_view_button_text_size" />
+
+    <TextView
+        android:id="@+id/slash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/title"
+        android:layout_toStartOf="@id/xAxis"
+        android:text="/"
+        android:textColor="@color/colorAccent"
+        android:textSize="19dp" />
+
+    <Button
+        android:id="@+id/xAxis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/title"
+        android:layout_alignParentEnd="true"
+        android:text="Day"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/card_view_button_text_size"
+        android:layout_marginEnd="12dp"/>
+
+
+    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title"
+        android:layout_margin="15dp"
+        app:contentPadding="5dp"
+        app:elevation="0dp">
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/statisticChat"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
+
