--- a/app/src/main/res/layout/statistics_frag.xml
+++ b/app/src/main/res/layout/statistics_frag.xml
@@ -15,9 +15,9 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -26,13 +26,17 @@
 
     <com.empty.jinux.simplediary.ui.main.statistics.view.punchcard.PunchCard
         android:id="@+id/punchCard"
+        style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/CardView.Light"/>
+        android:layout_margin="@dimen/cardview_margin"
+        app:cardBackgroundColor="@color/colorPrimary" />
 
     <com.empty.jinux.simplediary.ui.main.statistics.view.statistic.StatisticView
         android:id="@+id/statistics"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/cardview_margin"
+        app:cardBackgroundColor="@color/colorPrimary" />
 
 </LinearLayout>
