--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,5 +29,8 @@
     <dimen name="diary_detail_edit_tool_height">45dp</dimen>
     <dimen name="diary_detail_edit_tool_item_size" >30dp</dimen>
     <dimen name="diary_detail_edit_tool_item_space">20dp</dimen>
+    <dimen name="cardview_margin">5dp</dimen>
+    <dimen name="card_view_title_text_size">25sp</dimen>
+    <dimen name="card_view_button_text_size">15sp</dimen>
 
 </resources>
