--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,5 +32,6 @@
     <dimen name="cardview_margin">5dp</dimen>
     <dimen name="card_view_title_text_size">25sp</dimen>
     <dimen name="card_view_button_text_size">15sp</dimen>
+    <dimen name="text_size">15sp</dimen>
 
 </resources>
