--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,12 +15,12 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
-    android:layout_height="192dp"
-    android:background="@drawable/ic_moon_star"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="300dp"
+    android:layout_height="250dp"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:background="@drawable/ic_drawer_top_bg"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <TextView
@@ -29,6 +29,7 @@
         android:layout_gravity="bottom"
         android:textSize="25dp"
         android:text="@string/navigation_view_header_title"
+        android:layout_margin="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </FrameLayout>
