--- a/app/src/main/res/layout/layout_punchcard.xml
+++ b/app/src/main/res/layout/layout_punchcard.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/streakCardTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
-        android:text="@string/punchcard_title"
         android:textColor="@android:color/white"
         android:textSize="@dimen/card_view_title_text_size" />
 
@@ -26,25 +27,32 @@
         android:layout_marginTop="20dp"
         android:background="@android:color/darker_gray" />
 
-    <TextView
-        android:id="@+id/currentPunch"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
-        android:text="18"
-        android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/longestPunch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="15dp"
-        android:text="18"
-        android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/currentPunch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            tools:text="18"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/longestPunch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="15dp"
+            tools:text="18"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
