--- a/app/src/main/res/drawable/ic_emotion_normal.xml
+++ b/app/src/main/res/drawable/ic_emotion_normal.xml
@@ -8,7 +8,7 @@
       android:strokeAlpha="1"
       android:strokeLineJoin="round"
       android:strokeWidth="2.49370885"
-      android:fillColor="#000000"
+      android:fillColor="@color/icon_color_primary"
       android:strokeColor="#00000000"
       android:fillAlpha="1"
       android:strokeLineCap="round"/>
