--- a/app/src/main/res/drawable/ic_location.xml
+++ b/app/src/main/res/drawable/ic_location.xml
@@ -1,6 +1,6 @@
 <vector android:height="24dp" android:viewportHeight="26.458336"
     android:viewportWidth="26.458332" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillAlpha="1" android:fillColor="#000000"
+    <path android:fillAlpha="1" android:fillColor="@color/icon_color_primary"
         android:pathData="m21.665,15.796 l-1.683,0.009c-0.14,0.001 -0.266,0.058 -0.356,0.149 -0.091,0.092 -0.147,0.219 -0.146,0.359l0.007,1.309 2.694,-0.015 -0.007,-1.309c-0.002,-0.281 -0.228,-0.504 -0.508,-0.502zM22.176,18.366 L19.5,18.381 19.525,24.639 20.88,25.978 22.219,24.624zM13.23,0c-5.106,0 -9.261,4.154 -9.261,9.26 0,6.945 9.261,17.198 9.261,17.198 1.379,-2.07 3.742,-5.01 5.737,-8.164a0.54,0.54 0,0 1,0.14 -0.286,0.54 0.54,0 0,1 -0.16,-0.384l-0.006,-1.31c-0.002,-0.283 0.113,-0.549 0.3,-0.739 0.189,-0.191 0.454,-0.307 0.737,-0.309l0.727,-0.004c1.035,-2.053 1.748,-4.109 1.785,-6.002 0,-5.106 -4.153,-9.26 -9.259,-9.26zM13.229,5.966a3.557,3.557 0,0 1,3.557 3.557,3.557 3.557,0 0,1 -3.557,3.557 3.557,3.557 0,0 1,-3.556 -3.557,3.557 3.557,0 0,1 3.556,-3.557z"
         android:strokeColor="#00000000" android:strokeWidth="6.61438942"/>
 </vector>
