--- a/app/src/main/res/layout/spinner_emotion_item.xml
+++ b/app/src/main/res/layout/spinner_emotion_item.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:background="@color/colorPrimary">
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView
     android:id="@+id/list_item"
     android:layout_width="@dimen/diary_detail_edit_tool_item_size"
-    android:layout_height="@dimen/diary_detail_edit_tool_item_size" />
+    android:layout_height="@dimen/diary_detail_edit_tool_item_size"
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp" />
+</FrameLayout>
